# TestCUDA

./: .gitignore  CMakeLists.txt  新規 テキスト ドキュメント.txt
CudaVecDouble/: CMakeLists.txt  CudaVecDouble.cu  CudaVecDouble.h
MainA/: main.cpp
MainB/: main.cpp
